  
2010-02-06:
- fixed sorting issue in calllist by putting remoteNumber / "unknown" into the remoteName field
- "unknown" call list entries are now always sorted to beginning of the list

2010-02-07:
- addes a missing redefinition of GetTechId() in class FonbookManager

2010-02-16:
- modified logging to handle full path filenames cause by cmake in __FILE__.
  Provided new logging macros DBG, INF, ERR
- Removed dependency to OpenSSL due to licensing issues, 
  using copy of MD5 implementation from GNU coreutils 5.93
  
2010-02-19:
- Removed md5.[h,c] in favor of libgcrypt, libfritz++ now needs libgcrypt's 
  development header "gcrypt.h" to compile
  
2010-02-20:
- Added a missing call to Login() in FritzClient::InitCall()
- Do not initiate a call if no number is given in FritzClient::InitCall()

2010-02-24:
- Fixed LOCATOR macro to support cmake and make

2010-02-25:
- Implemented FritzClient::getCurrentIP and FritzClient::reconnectISP

2010-02-28:
- Fixed bug in FritzClient::reconnectISP
- added config option for setting the UPNP port
- now parsing the Fritz Box's phone book via xml export file (if available)
- phone book entries now have the additional fields "quickdial", "vanity", 
  "priority", "important"
- Fixed decoding of entities in xml phone book parser

2010-03-03 / 2010-03-04 / 2010-03-21:
- Modified FonbookEntry class: one FonbookEntry now holds all numbers of a 
  person 
  * Changed construction of FonbookEntrys accordingly
  * Changed interface of Fonbook::ResolveToName
  * Adapted FritzFonbook's parser
  * Adapted LocalFonbook's parser
  * Adapted ResolveToName in NummerzoekerFonbook and OertlichesFonbook
- Adapted local phonebook to use the same xml format, new FB versions use.
  Existing csv phone books are converted to xml automagically, entries 
  with TYPE_NONE are converted to TYPE_HOME
- FritzFonbook is now writeable, if FB xml import is available 
  (firmware >= xx.04.76 needed)
  
2010-03-25:
- Added various set methods to FonbookEntry

 